--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="dist/output.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline uppercase">Hello world!</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Catur Angga | Home</title>
+  <link href="dist/output.css" rel="stylesheet" />
+</head>
+<body>
+  
+  <nav>
+
+  </nav>
+
+  <section id="portfolio" class="">
+
+  </section >
+
+  <section id="blog">
+
+  </section>
+
+  <section id="contact">
+
+  </section>
+</body>
 </html>
