--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,36 @@
   <title>Catur Angga | Home</title>
   <link href="dist/output.css" rel="stylesheet" />
 </head>
-<body>
-  
-  <nav>
 
-  </nav>
+<body>
+
+  <header class="w-full h-[5rem] bg-slate-50 shadow-gray-500  drop-shadow-md">
+    <div class="container">
+      <div class="flex justify-between">
+        <div class="h-[5rem] w-1/5">
+          <div class="flex justify-center items-center  justify-items-center">
+            <h2 class="text-slate-800 uppercase py-8">Sekawan Creative</h2>
+          </div>
+        </div>
+        <nav class="flex flex-row mr-6">
+          <div class="mx-2 px-4 border-b-4 border-violet-600">
+            <h2 class="text-slate-800  pt-8">Portfolio</h2>
+          </div>
+          <div class="mx-2 px-4 border-b-4 border-violet-600">
+            <h2 class="text-slate-800  pt-8">Blog</h2>
+          </div>
+          <div class="mx-2 px-4 border-b-4 border-violet-600">
+            <h2 class="text-slate-800  pt-8">Contact</h2>
+          </div>
+        </nav>
+      </div>
+    </div>
+    
+  </header>
 
   <section id="portfolio" class="">
 
-  </section >
+  </section>
 
   <section id="blog">
 
@@ -25,4 +47,5 @@
 
   </section>
 </body>
+
 </html>
