--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
           </div>
         </div>
         <nav class="flex flex-row mr-6">
-          <div class="mx-2 px-4 border-b-4 border-violet-600">
+          <!-- border-violet-600 -->
+          <!-- border-b-4 -->
+          <div class="mx-2 px-4  ">
             <a href="#portfolio">
               <h2 class="text-slate-800  pt-8">Portfolio</h2>
             </a>
 
           </div>
-          <div class="mx-2 px-4 border-b-4 border-violet-600">
+          <div class="mx-2 px-4 ">
             <a href="blog.html">
               <h2 class="text-slate-800  pt-8">Blog</h2>
             </a>
 
           </div>
-          <div class="mx-2 px-4 border-b-4 border-violet-600">
+          <div class="mx-2 px-4">
             <a href="#contact">
               <h2 class="text-slate-800  pt-8">Contact</h2>
             </a>
@@ -151,23 +153,23 @@
         <!-- ICON -->
         <div class=" flex flex-row justify-center items-center space-x-0 md:space-x-14 xl:space-x-2 xl:pt-6">
           <a href="https://github.com/caturanggadiyaksa" target="_blank"
-            class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl   md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class="  fa-brands fa-github-alt fa-xl"></i></a>
+            class=" w-10 h-10 sm:w-12 sm:h-12 md:text-xl   md:w-14 md:h-14 rounded-full grid place-items-center "><i
+              class="hover:text-violet-800  fa-brands fa-github-alt fa-xl"></i></a>
           <a href="https://www.linkedin.com/in/catur-angga-adiyaksa-bba289228/" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class=" fa-brands fa-linkedin fa-xl fa-xl " id="my-icon-LinkedIn"></i></a>
+              class="hover:text-violet-800 fa-brands fa-linkedin fa-xl fa-xl " id="my-icon-LinkedIn"></i></a>
           <a href="https://www.instagram.com/angga_adiyaksa.id/" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class=" fa-brands fa-instagram fa-xl fa-xl " id="my-icon-Instagram"></i></a>
+              class="hover:text-violet-800 fa-brands fa-instagram fa-xl fa-xl " id="my-icon-Instagram"></i></a>
           <a href="https://www.tiktok.com/@caturanggaadiyaksa" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class=" fa-brands fa-tiktok fa-xl fa-xl " id="my-icon-Tiktok"></i></a>
+              class="hover:text-violet-800 fa-brands fa-tiktok fa-xl fa-xl " id="my-icon-Tiktok"></i></a>
           <a href="#" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center"><i
-              class=" fa-brands fa-twitter fa-xl fa-xl  " id="my-icon-Twiter"></i></a>
+              class="hover:text-violet-800 fa-brands fa-twitter fa-xl fa-xl  " id="my-icon-Twiter"></i></a>
           <a href="#" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center"><i
-              class=" fa-brands fa-facebook fa-xl fa-xl " id="my-icon-Facebook"></i></a>
+              class="hover:text-violet-800 fa-brands fa-facebook fa-xl fa-xl " id="my-icon-Facebook"></i></a>
 
         </div>
 
