update theme dark

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catur Angga | Home</title>
+  <title>Portfolio | Home</title>
   <link href="dist/output.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
   <script>
@@ -21,40 +21,41 @@
 
 <body>
 
-  <header class="w-full h-[5rem] bg-slate-50 shadow-gray-500  drop-shadow-md">
+  <header class="w-full h-[5rem] bg-slate-50 shadow-gray-500  drop-shadow-md dark:bg-gray-800 dark:shadow-gray-50 dark:drop-shadow-md ">
     <div class="container">
       <div class="flex justify-between">
         <div class="h-[5rem] w-1/5">
           <div class="flex justify-center items-center  justify-items-center">
-            <h2 class="text-slate-800 uppercase py-8">Sekawan Creative</h2>
+            <h2 class="text-slate-800 font-bold uppercase py-8 dark:text-gray-200">Sekawan <span class="text-violet-700 dark:text-violet-500">Creative</span></h2>
           </div>
         </div>
         <nav class="flex flex-row mr-6">
           <!-- border-violet-600 -->
           <!-- border-b-4 -->
-          <div class="mx-2 px-4  ">
+          <div class="mx-2 px-4  hover:border-violet-600 hover:border-b-4">
             <a href="#portfolio">
-              <h2 class="text-slate-800  pt-8">Portfolio</h2>
+              <h2 class="text-slate-800  pt-8 dark:text-gray-200">Portfolio</h2>
             </a>
 
           </div>
-          <div class="mx-2 px-4 ">
+          <div class="mx-2 px-4 hover:border-violet-600 hover:border-b-4">
             <a href="blog.html">
-              <h2 class="text-slate-800  pt-8">Blog</h2>
+              <h2 class="text-slate-800  pt-8 dark:text-gray-200">Blog</h2>
             </a>
 
           </div>
-          <div class="mx-2 px-4">
+          <div class="mx-2 px-4 hover:border-violet-600 hover:border-b-4">
             <a href="#contact">
-              <h2 class="text-slate-800  pt-8">Contact</h2>
+              <h2 class="text-slate-800  pt-8 dark:text-gray-200">Contact</h2>
             </a>
 
           </div>
 
-          <div class="mx-2 px-2">
+          <div class="mx-2 px-2 hover:border-violet-600 hover:border-b-4">
             <button id="theme-toggle" type="button" class=" mt-5 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-              <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
               <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+              <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+              
           </button>
         </nav>
       </div>
@@ -62,7 +63,7 @@
 
   </header>
 
-  <section id="portfolio" class="pt-14 pb-4 bg-neutral-200">
+  <section id="portfolio" class="pt-14 pb-4 bg-neutral-200 dark:bg-gray-600">
     <div class="w-full min-h-screen">
       <div class="mx-8">
         <div class="flex flex-col justify-center items-center">
@@ -74,7 +75,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/bookshelf.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Bookshelf App</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Bookshelf App</h4>
               </div>
             </div>
 
@@ -83,7 +84,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/spotify.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Spotify Clone</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Spotify Clone</h4>
               </div>
             </div>
           </div>
@@ -95,7 +96,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/my-portfolio-removebg-preview.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Portfolio Web</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Portfolio Web</h4>
               </div>
             </div>
 
@@ -104,7 +105,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/galeri.jpg" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Galery JKT48</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Galery JKT48</h4>
               </div>
             </div>
           </div>
@@ -116,7 +117,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/travel.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Travel Web</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Travel Web</h4>
               </div>
             </div>
 
@@ -125,7 +126,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/Landing-Page.jpg" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Landing Page Personal</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Landing Page Personal</h4>
               </div>
             </div>
           </div>
@@ -137,7 +138,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/btrlogo1920x1080.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Rebuild BTR Web</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Rebuild BTR Web</h4>
               </div>
             </div>
 
@@ -146,7 +147,7 @@
                 <img class="hover:scale-125 transition duration-300 ease-in-out w-[35rem] h-[15rem] rounded-xl" src="dist/img/my-portfolio2-removebg.png" alt="">
               </div>
               <div class="mb-4">
-                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold">Portfolio Tailwind CSS</h4>
+                <h4 class="text-gray-700 text-center text-xl pt-2 pb-10 font-semibold dark:text-gray-200">Portfolio Tailwind CSS</h4>
               </div>
             </div>
           </div>
@@ -161,37 +162,37 @@
 
   </section>
 
-  <section id="contact" class="pt-4 pb-6">
+  <section id="contact" class="pt-4 pb-6 dark:bg-violet-600">
     <!-- © 2023 Digitalnexa.com | Web Design in Dubai By NEXA -->
-    <div class="w-full h-[5rem]">
+    <div class="w-full dark:bg-violet-600 w-full">
       <div class="grid place-items-center place-content-center">
         <!-- ICON -->
         <div class=" flex flex-row justify-center items-center space-x-0 md:space-x-14 xl:space-x-2 xl:pt-6">
           <a href="https://github.com/caturanggadiyaksa" target="_blank"
             class=" w-10 h-10 sm:w-12 sm:h-12 md:text-xl   md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class="hover:text-violet-800  fa-brands fa-github-alt fa-xl"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200  fa-brands fa-github-alt fa-xl"></i></a>
           <a href="https://www.linkedin.com/in/catur-angga-adiyaksa-bba289228/" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class="hover:text-violet-800 fa-brands fa-linkedin fa-xl fa-xl " id="my-icon-LinkedIn"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200 fa-brands fa-linkedin fa-xl fa-xl " id="my-icon-LinkedIn"></i></a>
           <a href="https://www.instagram.com/angga_adiyaksa.id/" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class="hover:text-violet-800 fa-brands fa-instagram fa-xl fa-xl " id="my-icon-Instagram"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200 fa-brands fa-instagram fa-xl fa-xl " id="my-icon-Instagram"></i></a>
           <a href="https://www.tiktok.com/@caturanggaadiyaksa" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl md:w-14 md:h-14 rounded-full grid place-items-center "><i
-              class="hover:text-violet-800 fa-brands fa-tiktok fa-xl fa-xl " id="my-icon-Tiktok"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200 fa-brands fa-tiktok fa-xl fa-xl " id="my-icon-Tiktok"></i></a>
           <a href="#" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center"><i
-              class="hover:text-violet-800 fa-brands fa-twitter fa-xl fa-xl  " id="my-icon-Twiter"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200 fa-brands fa-twitter fa-xl fa-xl  " id="my-icon-Twiter"></i></a>
           <a href="#" target="_blank"
             class="w-10 h-10 sm:w-12 sm:h-12 md:text-xl  md:w-14 md:h-14 rounded-full grid place-items-center"><i
-              class="hover:text-violet-800 fa-brands fa-facebook fa-xl fa-xl " id="my-icon-Facebook"></i></a>
+              class="hover:text-violet-600 dark:hover:text-gray-200 fa-brands fa-facebook fa-xl fa-xl " id="my-icon-Facebook"></i></a>
 
         </div>
 
-        <div class="pt-4 pb-8">
-          <h4 class="text-slate-800 text-lg font-medium">© 2023 <a
-              href="caturanggaadiyaksa.my.id">caturanggaadiyaksa.my.id</a> <span class="pl-2">|</span> <span
-              class="pl-2">Developer By CAA</span></h4>
+        <div class="pt-4 pb-8 ">
+          <h4 class="text-slate-800 text-lg font-medium dark:text-gray-200">© 2023 <a
+              href="https://caturanggaadiyaksa.my.id" target="_blank">caturanggaadiyaksa.my.id</a> <span class="pl-2">|</span> <span
+              class="pl-2">Developer By </span><a href="https://github.com/next-js-team" target="_blank">NEXTJS TEAM</a></h4>
         </div>
 
       </div>
