add humberger menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="dist/output.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
   <script>
-    // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
         document.documentElement.classList.add('dark');
     } else {
@@ -22,14 +21,23 @@
 <body>
 
   <header class="w-full h-[5rem] bg-slate-50 shadow-gray-500  drop-shadow-md dark:bg-gray-800 dark:shadow-gray-50 dark:drop-shadow-md ">
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="flex justify-between">
-        <div class="h-[5rem] w-1/5">
+        <div class="h-[5rem] w-1/5 sm:w-1/2 sm:text-sm lg:w-1/4">
           <div class="flex justify-center items-center  justify-items-center">
             <h2 class="text-slate-800 font-bold uppercase py-8 dark:text-gray-200">Sekawan <span class="text-violet-700 dark:text-violet-500">Creative</span></h2>
           </div>
         </div>
-        <nav class="flex flex-row mr-6">
+
+       <div class="sm:flex sm:items-center lg:hidden  w-1/2 ">
+        <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
+          <span class="hamburger-line transition duration-300 origin-top-left"></span>
+          <span class="hamburger-line transition duration-300 "></span>
+          <span class="hamburger-line transition duration-300 origin-bottom-left"></span>
+        </button>
+       </div>
+
+        <nav class="xs:hidden sm:hidden lg:flex flex-row mr-6">
           <!-- border-violet-600 -->
           <!-- border-b-4 -->
           <div class="mx-2 px-4  hover:border-violet-600 hover:border-b-4">
@@ -59,7 +67,7 @@
           </button>
         </nav>
       </div>
-    </div>
+    <!-- </div> -->
 
   </header>
 
